add lint command required by build pipeline

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
+    "lint:check": "eslint . --ext .ts --max-warnings 10",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
