--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "lint:check": "eslint . --ext .ts --max-warnings 10",
+    "build": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
